--- a/app/src/main/res/layout/layout_request.xml
+++ b/app/src/main/res/layout/layout_request.xml
@@ -93,7 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/yuanjiao">
-                <EditText
+                <TextView
                     android:id="@+id/ed_request1"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
@@ -110,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/yuanjiao">
 
-                <EditText
+                <TextView
                     android:id="@+id/tv_date1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -167,7 +167,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/yuanjiao">
-                <EditText
+                <TextView
                     android:id="@+id/ed_request2"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
@@ -184,7 +184,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/yuanjiao">
 
-                <EditText
+                <TextView
                     android:id="@+id/tv_date2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -228,7 +228,7 @@
                         android:layout_height="30dp"
                         android:text="神经病摄影馆"
                         android:gravity="center_vertical"/>
-
+'
                 </LinearLayout>
 
             </LinearLayout>
@@ -239,7 +239,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/yuanjiao">
-                <EditText
+                <TextView
                     android:id="@+id/ed_request3"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
@@ -256,7 +256,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/yuanjiao">
 
-                <EditText
+                <TextView
                     android:id="@+id/tv_date3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
